--- a/meltdown/US/Makefile
+++ b/meltdown/US/Makefile
@@ -4,11 +4,11 @@ x86: main_x86
 arm: main_arm
 
 main_x86: main.c
-	gcc main.c -o poc_x86 -I../../ -L../../libpte -lpte -lrt
+	gcc main.c -o poc -I../../ -L../../libpte -lpte -lrt
 	# removed o3
 
 main_arm: main.c
-	aarch64-linux-gnu-gcc -march=armv8-a -D__ARM_ARCH_8A__ -static -Os main.c -o poc_arm -I../../  -L../../libpte -lpte -lrt
+	aarch64-linux-gnu-gcc -march=armv8-a -D__ARM_ARCH_8A__ -static -Os main.c -o poc -I../../  -L../../libpte -lpte -lrt
 
 clean:
-	rm -f poc_*
+	rm -f poc
