--- a/meltdown/GP/Makefile
+++ b/meltdown/GP/Makefile
@@ -6,7 +6,7 @@ module/kernel_module.ko: ../../libcr3/kernel_module.c
 	cd ../../libcr3/ && make
 
 main_x86: main.c module/kernel_module.ko
-	gcc main.c -o poc -I../../
+	gcc main.c -o poc -O3 -I../../
 
 clean:
 	rm -f poc && cd ../../libcr3/ && make clean
