--- a/meltdown/US/Makefile
+++ b/meltdown/US/Makefile
@@ -4,8 +4,7 @@ x86: main_x86
 arm: main_arm
 
 main_x86: main.c
-	gcc main.c -o poc -I../../ -L../../libpte -lpte -lrt
-	# removed o3
+	gcc main.c -o poc -O3 -I../../ -L../../libpte -lrt
 
 main_arm: main.c
 	aarch64-linux-gnu-gcc -march=armv8-a -D__ARM_ARCH_8A__ -static -Os main.c -o poc -I../../  -L../../libpte -lpte -lrt
